fix(comments): hide scrollbar on single-line input

--- a/src/components/photo/photo-comments.css
+++ b/src/components/photo/photo-comments.css
@@ -226,6 +226,7 @@
   height: var(--photo-comments-send-size);
   outline: none;
   transition: var(--input-transition);
+  overflow: hidden;
 }
 
 .photo-comments__input:focus {
